Trying to get overlay correct on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -74,8 +74,7 @@ h2 {
   }
 
   #overlay{
-    position: static;
-    width: 100%;
+    height: 475px;
   }
 
   #overlay p {
